# sleep_job_project

./: Cargo.toml  README.md
common_lib/: Cargo.toml
common_lib/src/: constants.rs  error.rs  http_response.rs  lib.rs
common_lib/src/dto/: job.rs
common_lib/src/message/: message.rs
main_service/: .env  Cargo.toml
main_service/src/: config.rs  main.rs
main_service/src/app/: job.rs
main_service/src/app/job/: delivery.rs
main_service/src/app/job/delivery/: http.rs  messaging.rs
main_service/src/app/job/repository/: job.rs
main_service/src/app/job/usecase/: job.rs
main_service/src/domain/: constants.rs  mod.rs
main_service/src/domain/dto/: job_dto.rs  mod.rs
main_service/src/domain/misc/: broadcast_channel.rs  mod.rs
main_service/src/domain/model/: mod.rs
main_service/src/domain/repository/: mod.rs
main_service/src/domain/usecase/: job.rs  mod.rs  usecases.rs
main_service/src/infrastructure/: mod.rs
main_service/src/infrastructure/database/: mod.rs
main_service/src/infrastructure/messaging/: channel_pool.rs  consumer.rs  messaging.rs
main_service/static/: index.html
worker_service/: .env  Cargo.toml
worker_service/src/: main.rs
worker_service/src/app/job/delivery/: http.rs  messaging.rs
worker_service/src/app/job/repository/: job.rs
worker_service/src/app/job/usecase/: job.rs
worker_service/src/domain/model/: job_model.rs
worker_service/src/domain/repository/: job.rs  repositories.rs
worker_service/src/domain/usecase/: job.rs  usecases.rs
worker_service/src/infrastructure/database/: postgre.rs
worker_service/src/infrastructure/messaging/: channel_pool.rs  consumer.rs  messaging.rs  mod.rs
