[package]
name = "main_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.0", features = ["postgres"] }
amq-protocol = "8.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
common_lib = { path = "../common_lib" }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"] } # Async PostgreSQL driver
dotenv = "0.15" # For loading environment variables
async-trait = "0.1"
thiserror = "2.0.12"
lapin = "2.5.1"
tokio-amqp = "2.0.0" # or the latest version
futures-lite = "2.6.0"
tokio-executor-trait = "2.1.3" # or the latest version
chrono = "0.4" # Or the latest version you need

actix-web-lab = "0.24"
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }
futures = "0.3"
tokio-stream = "0.1"

